--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -20,15 +20,15 @@
                 <a class="nav-link active" aria-current="page" href="../html/aboutus.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">FAQ</a>
+                <a class="nav-link active" aria-current="page" href="faq.html">FAQ</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Other
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Privacy Policy</a></li>
-                  <li><a class="dropdown-item" href="#">Terms of Use</a></li>
+                  <li><a class="dropdown-item" href="privacy_policy.html">Privacy Policy</a></li>
+                  <li><a class="dropdown-item" href="terms_of_use.html">Terms of Use</a></li>
                 </ul>
               </li>
             </ul>
