--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -41,7 +41,11 @@
       <p class="items">Team members: Samuel Williams, Emma Bi, Michael Peng, Ty Collver, and Henry Cawse.</p>
       <p class="items">Programmers: Jim Wang</p>
       <p class="items" id="contact-email">Feel free to reach us at <a href="aboutus.html">animaltracksendemail@gmail.com</a>.</p>
-      
+      <br><br><br><hr/>
+      <h2 id="sources">Sources</h2>
+      <img class="globe" src="../img/world-globe.png">
+      <div class="sources">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 </body>
