Change name source

--- a/public/html/aboutus.html
+++ b/public/html/aboutus.html
@@ -31,7 +31,8 @@
         <ul class="aboutus-ul">
             <li>Emma Bi</li>
             <li>Henry Cawse</li>
-            <li>Michael Peng</li>
+            <li>Michael P.</li>
+            <li>Samuel Williams</li>
             <li>Ty C.</li>
         </ul>
     </div>
